kubernetes-configs/deployment-v2board-nfs-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: v2board-nfs-server
  namespace: v2b-k8s
  labels:
    app: v2board-nfs-server
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2board-nfs-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: v2board-nfs-server
    spec:
      volumes:
        - name: nfs-pvc
          persistentVolumeClaim:
            claimName: v2board-config
      containers:
        - name: nfs-server
          image: 'gcr.io/google_containers/volume-nfs:0.8'
          ports:
            - name: nfs
              containerPort: 2049
              protocol: TCP
            - name: mountd
              containerPort: 20048
              protocol: TCP
            - name: rpcbind
              containerPort: 111
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: nfs-pvc
              mountPath: /exports
            - name: nfs-pvc
              mountPath: /data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
