kubernetes-configs/deployment-v2board-queue.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: v2board-queue
  namespace: v2b-k8s
  labels:
    app: v2board
  annotations:
    configmap.reloader.stakater.com/reload: v2board-php-env
    deployment.kubernetes.io/revision: '6'
    kubesphere.io/creator: topjohncian
spec:
  replicas: 3
  selector:
    matchLabels:
      app: v2board-queue
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: v2board-queue
      annotations:
        kubesphere.io/creator: topjohncian
        kubesphere.io/restartedAt: '2023-03-12T06:01:40.019Z'
    spec:
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
            type: ''
        - name: volume-qvfp1p
          persistentVolumeClaim:
            claimName: v2board-nfs
        - name: volume-qmdt9d
          configMap:
            name: v2board-nginx-conf
            defaultMode: 420
      containers:
        - name: container-php80
          image: >-
            asia-east2-docker.pkg.dev/ahdark-services/star-horizon/v2board-php:latest
          command:
            - sh
          args:
            - /entrypoint_queue.sh
          resources: {}
          volumeMounts:
            - name: host-time
              readOnly: true
              mountPath: /etc/localtime
            - name: volume-qvfp1p
              mountPath: /www/v2board/config
              subPath: v2board/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: v2board-queue
                topologyKey: kubernetes.io/hostname
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
