kubernetes-configs/service-v2board-nfs-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: v2board-nfs-server
  namespace: v2b-k8s
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  ports:
    - name: nfs
      protocol: TCP
      port: 2049
      targetPort: 2049
    - name: mountd
      protocol: TCP
      port: 20048
      targetPort: 20048
    - name: rpcbind
      protocol: TCP
      port: 111
      targetPort: 111
  selector:
    app: v2board-nfs-server
  clusterIP: 10.28.0.108
  clusterIPs:
    - 10.28.0.108
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
