kubernetes-configs/service-v2board-nginx-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: v2board-nginx-service
  namespace: v2b-k8s
  labels:
    app: v2board-nginx-service
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubesphere.io/creator: topjohncian
spec:
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: v2board
  clusterIP: 10.28.7.37
  clusterIPs:
    - 10.28.7.37
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
